force-app/main/default/objects/Fulfillment__c/fields/Set_Up_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Subscription__c</fullName>
    <formula>Boom_Order_Product_Line__r.Product__r.Set_Up_Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Up Subscription</label>
    <type>Checkbox</type>
</CustomField>