force-app/main/default/objects/Fulfillment__c/fields/Sgiz_URL__c.field-meta.xml
<CustomField>
    <fullName>Sgiz_URL__c</fullName>
    <formula>IF(ISBLANK(Boom_Order_Product_Line__r.Product__r.Collect_Content_ID__c), null, HYPERLINK(Boom_Order_Product_Line__r.Product__r.Collect_Content_ID__c &amp;&quot;?FID=&quot;&amp; Full_ID__c,Boom_Order_Product_Line__r.Product__r.Collect_Content_ID__c &amp;&quot;?FID=&quot;&amp; Full_ID__c))</formula>
    <label>Sgiz URL</label>
    <type>Text</type>
</CustomField>