force-app/main/default/objects/Fulfillment__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Boom_Order__r.ShipToStreetLong__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>