force-app/main/default/objects/Fulfillment__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <formula>Boom_Order__r.ShipToCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>