force-app/main/default/objects/Fulfillment__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <formula>Boom_Order__r.ShipToStateProvince__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>