force-app/main/default/objects/Fulfillment__c/fields/SM_Management_App__c.field-meta.xml
<CustomField>
    <fullName>SM_Management_App__c</fullName>
    <description>To track where clients are onboarded for social media management</description>
    <inlineHelpText>To track where clients are onboarded for social media management</inlineHelpText>
    <label>SM Management App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Studio</fullName>
            </value>
            <value>
                <fullName>PromoRepublic</fullName>
            </value>
            <value>
                <fullName>Hootsuite</fullName>
            </value>
            <value>
                <fullName>FB Business Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>