force-app/main/default/objects/Fulfillment__c/fields/Social_Post_2__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_2__c</fullName>
    <label>Social Post 2</label>
    <type>Url</type>
</CustomField>