force-app/main/default/objects/Fulfillment__c/fields/Social_Post_5__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_5__c</fullName>
    <label>Social Post 5</label>
    <type>Url</type>
</CustomField>