force-app/main/default/objects/Fulfillment__c/fields/Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Space_Reservation__c</fullName>
    <formula>Boom_Order__r.Space_Reservation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Space Reservation</label>
    <type>Checkbox</type>
</CustomField>