force-app/main/default/objects/Fulfillment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Content Received</fullName>
                <color>#FFCC66</color>
                <label>Content Received</label>
            </value>
            <value>
                <fullName>Ready for FTP</fullName>
                <color>#E27001</color>
                <label>Ready for FTP</label>
            </value>
            <value>
                <fullName>Product Created</fullName>
                <color>#A845DC</color>
                <label>Product Created</label>
            </value>
            <value>
                <fullName>In Revision</fullName>
                <color>#F3D904</color>
                <label>In Revision</label>
            </value>
            <value>
                <fullName>In Revision - Urgent</fullName>
                <color>#FFCC33</color>
                <label>In Revision - Urgent</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#66E9BD</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Web Content Received</fullName>
                <color>#0B24BE</color>
                <label>Web Content Received</label>
            </value>
            <value>
                <fullName>Web Product Created</fullName>
                <color>#419249</color>
                <label>Web Product Created</label>
            </value>
            <value>
                <fullName>Web Approved</fullName>
                <color>#66CCCC</color>
                <label>Web Approved</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#FF9900</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#33CC00</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>To Print</fullName>
                <color>#2F5D85</color>
                <label>To Print</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#666666</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Closed No Response</fullName>
                <color>#993300</color>
                <label>Closed No Response</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#EFAE73</color>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Write copy</fullName>
                <color>#57F17C</color>
                <label>Write copy</label>
            </value>
            <value>
                <fullName>CSR Appointment Scheduled</fullName>
                <color>#0B6FCE</color>
                <label>CSR Appointment Scheduled</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 1st Request</fullName>
                <color>#78C953</color>
                <label>CSR Appointment Incomplete - 1st Request</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 2nd Request</fullName>
                <color>#E27001</color>
                <label>CSR Appointment Incomplete - 2nd Request</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 3rd Request</fullName>
                <color>#A845DC</color>
                <label>CSR Appointment Incomplete - 3rd Request</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – 4th Request</fullName>
                <color>#F3D904</color>
                <label>CSR Appointment Incomplete – 4th Request</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Content Needed</fullName>
                <color>#A53711</color>
                <label>CSR Appointment Incomplete – Content Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Approval Needed</fullName>
                <color>#66E9BD</color>
                <label>CSR Appointment Incomplete – Approval Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Content Needed</fullName>
                <color>#0B24BE</color>
                <label>CSR Appointment Complete - Content Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Approval Needed</fullName>
                <color>#419249</color>
                <label>CSR Appointment Complete - Approval Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Open Fulfillment</fullName>
                <color>#B6E32E</color>
                <label>CSR Appointment Complete - Open Fulfillment</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Urgent Response Needed</fullName>
                <color>#641CCF</color>
                <label>CSR Appointment Complete - Urgent Response Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Follow Up Needed</fullName>
                <color>#F96FB7</color>
                <label>CSR Appointment Complete - Follow Up Needed</label>
            </value>
            <value>
                <fullName>CSR Appointment Complete – Follow Up Scheduled</fullName>
                <color>#2F5D85</color>
                <label>CSR Appointment Complete – Follow Up Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>