force-app/main/default/objects/Fulfillment__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>OrderProductLine__r.kugo2p__Product__r.kugo2p__ReferenceProduct__r.Subscription__c</description>
    <formula>Boom_Order_Product_Line__r.Product__r.Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>