force-app/main/default/objects/Fulfillment__c/fields/Subscription_Onboard_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Onboard_Deadline__c</fullName>
    <formula>Date_Ordered__c + 22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Onboard Deadline</label>
    <type>Date</type>
</CustomField>