force-app/main/default/objects/Fulfillment__c/fields/Subscription_Product__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product__c</fullName>
    <formula>CASESAFEID(Boom_Order_Product_Line__r.Product__r.Subscription_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Product</label>
    <type>Text</type>
</CustomField>