force-app/main/default/objects/Fulfillment__c/fields/Testimonial_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Contact_Count__c</fullName>
    <label>Testimonial Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>