force-app/main/default/objects/Fulfillment__c/fields/Testimonial_Display_Count__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Count__c</fullName>
    <label>Testimonial Display Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>