force-app/main/default/objects/Fulfillment__c/fields/Testimonial_Display_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Orientation__c</fullName>
    <label>Testimonial Display Orientation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>