force-app/main/default/objects/Fulfillment__c/fields/Testimonial_Display_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Social_Media__c</fullName>
    <label>Testimonial Display Social Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>