force-app/main/default/objects/Fulfillment__c/fields/Testimonial_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_First_Name__c</fullName>
    <description>Testimonial First Name (Or team names)</description>
    <inlineHelpText>Testimonial First Name (Or team names)</inlineHelpText>
    <label>Testimonial First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>