force-app/main/default/objects/Fulfillment__c/fields/Testimonial_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Last_Name__c</fullName>
    <description>Testimonial Last Name (Or team names)</description>
    <inlineHelpText>Testimonial Last Name (Or team names)</inlineHelpText>
    <label>Testimonial Last Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>