force-app/main/default/objects/Fulfillment__c/fields/Third_Shipping_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Third_Shipping_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check along with &quot;shipping info needed&quot;, uncheck shipping info needed after saving.</inlineHelpText>
    <label>Third Shipping Attempt</label>
    <type>Checkbox</type>
</CustomField>