force-app/main/default/objects/Fulfillment__c/fields/Total_EL_Issues__c.field-meta.xml
<CustomField>
    <fullName>Total_EL_Issues__c</fullName>
    <description>Total EL issues associated with the fulfillment</description>
    <inlineHelpText>Total EL issues associated with the fulfillment</inlineHelpText>
    <label>Total EL Issues</label>
    <summaryFilterItems>
        <field>Essential_Living_Issue__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Draft, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Essential_Living_Issue__c.Fulfillment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>