force-app/main/default/objects/Fulfillment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type for testimonial survey</description>
    <inlineHelpText>Type for testimonial survey</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Person</fullName>
            </value>
            <value>
                <fullName>Team or Group</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>