force-app/main/default/objects/Fulfillment__c/fields/Upload_Your_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Upload_Your_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Your Contacts</label>
    <type>Checkbox</type>
</CustomField>