force-app/main/default/objects/Fulfillment__c/fields/Use_Last_Year_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Use_Last_Year_s_Profile__c</fullName>
    <formula>Boom_Order__r.Use_Last_Year_s_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Last Year&apos;s Profile</label>
    <type>Checkbox</type>
</CustomField>