force-app/main/default/objects/Fulfillment__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>URL for video to be used for Digital Spotlight Award Product.</description>
    <inlineHelpText>URL for video to be used for Digital Spotlight Award Product.</inlineHelpText>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>