force-app/main/default/objects/Fulfillment__c/fields/Web_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_URL__c</fullName>
    <formula>PrimaryRecipient__r.Web_Account_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Account URL</label>
    <type>Text</type>
</CustomField>