force-app/main/default/objects/Fulfillment__c/fields/WP_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>WP_Background_Color__c</fullName>
    <description>New field to capture wall plaque color from SGIZMO.</description>
    <label>WP Background Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>