force-app/main/default/objects/Fulfillment__c/fields/WSJ_Upload__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Upload__c</fullName>
    <formula>Market__r.WSJ_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WSJ Upload</label>
    <type>Date</type>
</CustomField>