force-app/main/default/objects/Fulfillment__c/fields/X5_Pub_Month__c.field-meta.xml
<CustomField>
    <fullName>X5_Pub_Month__c</fullName>
    <formula>Market__r.X5_Pub_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>+5 Pub Month</label>
    <type>Date</type>
</CustomField>