force-app/main/default/objects/Fulfillment__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>PrimaryRecipient__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>