force-app/main/default/objects/Fulfillment__c/recordTypes/Five_Star_Professional.recordType-meta.xml
<RecordType>
    <fullName>Five_Star_Professional</fullName>
    <active>true</active>
    <description>FSP award markeing tools</description>
    <label>Five Star Professional</label>
</RecordType>