force-app/main/default/objects/Fulfillment__c/listViews/All_Essential_Living_Digital.listView-meta.xml
<ListView>
    <fullName>All_Essential_Living_Digital</fullName>
    <booleanFilter>(1 AND 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>PrimaryRecipient__c</columns>
    <columns>Product_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Market__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Action__c</columns>
    <columns>Client_Contact_List__c</columns>
    <columns>Fulfillment_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Base_Product__c</field>
        <operation>contains</operation>
        <value>e-magazine</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled</value>
    </filters>
    <label>_Essential Living E-Magazine - All</label>
    <sharedTo>
        <group>Fulfillment_Team</group>
    </sharedTo>
</ListView>