force-app/main/default/objects/Fulfillment__c/listViews/Approved_Schedule_Delivery.listView-meta.xml
<ListView>
    <fullName>Approved_Schedule_Delivery</fullName>
    <columns>NAME</columns>
    <columns>Stage_Change_Date__c</columns>
    <columns>Market__c</columns>
    <columns>PrimaryRecipient__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Postcard_Delivery_Month__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Product_Style__c</columns>
    <columns>Product_Template__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Action__c</columns>
    <columns>Date_Sent_to_Vendor__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Notes_for_Ad_Prod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Base_Product__c</field>
        <operation>contains</operation>
        <value>Postcard</value>
    </filters>
    <filters>
        <field>Next_Action__c</field>
        <operation>equals</operation>
        <value>Schedule Delivery</value>
    </filters>
    <label>__0. Approved - Schedule Delivery</label>
    <sharedTo>
        <group>Fulfillment_Team</group>
        <group>Jonathan_Wesser</group>
        <group>Mindy_Stansbarger</group>
        <group>Teresa_Hemingson</group>
    </sharedTo>
</ListView>